middlewareDeployment/seata/nacos/nacos/nacos-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  namespace: nacos-ns
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: nacos
  ports:
    - name: client
      port: 8848
      targetPort: 8848
    - name: grpc
      port: 9848
      targetPort: 9848
    - name: raft
      port: 9849
      targetPort: 9849
    - name: old-raft-rpc
      port: 7848
      targetPort: 7848
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: nacos-ns
spec:
  serviceName: nacos-headless
  replicas: 3
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: nacos

  template:
    metadata:
      labels:
        app: nacos

    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nacos
              topologyKey: kubernetes.io/hostname

      containers:
        - name: nacos
          image: shixiaochuangk8s/nacos:v2.0.3
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "2Gi"

          ports:
            - name: client-port
              containerPort: 8848
            - name: client-rpc
              containerPort: 9848
            - name: raft-rpc
              containerPort: 9849
            - name: old-raft-rpc
              containerPort: 7848

          readinessProbe:
            httpGet:
              path: /nacos/actuator/health
              port: 8848
            initialDelaySeconds: 30
            periodSeconds: 10

          volumeMounts:
            - name: properties
              mountPath: /home/nacos/conf/application.properties
              subPath: application.properties
            - name: data
              mountPath: /home/nacos/plugins/peer-finder
              subPath: peer-finder
            - name: data
              mountPath: /home/nacos/data
              subPath: data
            - name: data
              mountPath: /home/nacos/logs
              subPath: logs

      volumes:
        - name: properties
          configMap:
            name: nacos-config

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: csi-rbd-sc
        resources:
          requests:
            storage: 10Gi
