middlewareDeployment/seata/nacos/nacos/nacos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: nacos-ns
  labels:
    app: nacos
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
  selector:
    app: nacos
