middlewareDeployment/seata/nacos/nacos/nacos-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: nacos-ns
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nacos
  namespace: nacos-ns
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: nacos-ns
  hostnames:
    - nacos.shixiaochuang.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nacos
          port: 8848
